# polybench-rs

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile.toml  README.md  exec.mjs  size.csv
.cargo/: config.toml
src/: _2mm.rs  _3mm.rs  adi.rs  atax.rs  bicg.rs  cholesky.rs  correlation.rs  covariance.rs  deriche.rs  doitgen.rs  durbin.rs  fdtd_2d.rs  floyd_warshall.rs  gemm.rs  gemver.rs  gesummv.rs  gramschmidt.rs  heat_3d.rs  jacobi_1d.rs  jacobi_2d.rs  lu.rs  ludcmp.rs  mvt.rs  nussinov.rs  seidel_2d.rs  symm.rs  syr2k.rs  syrk.rs  trisolv.rs  trmm.rs  utils.rs
wasm/: _2mm.wasm  _3mm.wasm  adi.wasm  atax.wasm  bicg.wasm  cholesky.wasm  correlation.wasm  covariance.wasm  deriche.wasm  doitgen.wasm  durbin.wasm  fdtd_2d.wasm  floyd_warshall.wasm  gemm.wasm  gemver.wasm  gesummv.wasm  gramschmidt.wasm  heat_3d.wasm  jacobi_1d.wasm  jacobi_2d.wasm  lu.wasm  ludcmp.wasm  mvt.wasm  nussinov.wasm  seidel_2d.wasm  symm.wasm  syr2k.wasm  syrk.wasm  trisolv.wasm  trmm.wasm
