[package]
name = "polybench-rs"
version = "0.2.0"
authors = ["Joseph Rafael Ferrer <rafael2x0@gmail.com>", "Jiayi Hu <jiayi.ghu@gmail.com>"]
edition = "2018"
license = "GPLv2"

[features]
std = []

[dependencies]

[lib]
name = "syr2k"
path = "src/syr2k.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
